lib/ceml/lang/tt/instructions.treetop
module CEML
grammar Instructions
    include Lexer

    rule basic_statement
        (ask_stmt / tell_stmt / assign_stmt / record_stmt / set_stmt / pick_stmt / seed_stmt / sync_stmt /
            replace_stmt / release_stmt) {

            def delay
                if parent.respond_to? :later and not parent.later.empty?
                    parent.later.duration.seconds
                end
            end

            def role;  id.text_value.to_sym; end
            def text;  defined?(super) && super.text_value; end
            def var
                return varname.text_value if cmd == :record or cmd == :set or cmd == :release
                (!respond_to?(:about) || about.empty?) ? nil : about.varname.text_value;
            end
            def key;   var || text; end
            def cmd;  text_value.split.first.to_sym; end
            def cond
                (!respond_to?(:condition) || condition.empty?) ? nil : condition.value
            end

            def bytecode
                code = []
                code.concat   [[[role], :start_delay, delay],
                               [[role], :complete_delay]] if delay
                code.concat case cmd
                when :record;  [[[role], :answered_q,      {:key  => key}]]
                when :set;     [[[role], :set,             {:key  => key, :value => text}]]
                when :pick;    [[[role], :pick,            {:key  => key, :value => text}]]
                when :seed;    [[[role], :seed,            {:target => var, :role => role}]]
                when :ask;     [[[role], :ask_q,           {:text => text}],
                                [[role], :answered_q,      {:key  => key}]]
                when :tell;    [[[role], :send_msg,        {:text => text}]]
                when :assign;  [[[role], :assign,          {:text => text}],
                                [[role], :complete_assign, {:text => text}]]
                when :release; [[[role], :release,         {:tag  => key, :cond => cond}]]
                when :sync;    [[[role], :sync,            {:role => role}]]
                end
                code
            end
        }
    end

    rule instruction_stmt
        later:later? basic_statement
    end

    rule later
        duration ws 'later' ws
    end

    rule seed_stmt
        'seed' ws varname:id ws 'with' ws rolename:id
    end

    rule record_stmt
        'record' ws id ws varname:id
    end

    rule tell_stmt
        'tell' ws id ':' ws? text
    end

    rule assign_stmt
        'assign' ws id ':' ws? text
    end

    rule ask_stmt
        'ask' ws id about:(ws 're' ws varname:id)? ':' ws? text
    end

    rule set_stmt
        'set' ws id ws varname:id ':' ws? text
    end

    rule pick_stmt
        'pick' ws id ws varname:id ':' ws? text
    end

    rule sync_stmt
        'sync' ws id
    end

    rule release_stmt
        'release' ws id ws 'as' ws varname:id condition:condition?
    end

    rule replace_stmt
        'replace' ws id condition:condition?
    end

    rule condition
        ws type:('if' / 'unless') ws thing:id {
            def value
                [type.text_value.to_sym, thing.text_value.to_sym]
            end
        }
    end

end
end
